@@ -8,7 +8,7 @@ webalizer=1
 iface=
 shell=/dev/null
 ftp_shell=/bin/false
-unix_shell=/bin/sh
+unix_shell=/bin/bash /bin/sh
 append=1
 append_style=0
 longname=0
